# qt_camera_learn

./: CMakeLists.txt  camera.cpp  camera.h  camera_i.cpp  camera_i.h  main.cpp
